changing padding on modal a bit

--- a/gk/cubpup_modal_coupon/index.html
+++ b/gk/cubpup_modal_coupon/index.html
@@ -759,12 +759,11 @@ instruction: Red links are fixed in place, but rotate with grid
 
 </div>
 
+<!-- Modal -->
 <div id="ccode-modal" class="modal">
-
-  <!-- Modal content -->
   <div class="modal-content">
     <span class="modal-close">&times;</span>
-      <p class="ccode">Some text in the Modal..</p>
+      <p class="ccode"></p>
   </div>
 
 </div>
