added curtain to all mobile pages

--- a/gk/curtain/about-us.html
+++ b/gk/curtain/about-us.html
@@ -18,7 +18,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "about-us.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="lanceencarnado.github.io/gk/curtain/phone/about-us.html"/>
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="https://tackleboxing.000webhostapp.com/phone/about-us.html"/>
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
